...
        }
    }
    
    var body: some View {
        //The add button in the add project popup
        let popUpAddButton =
            Button("Add") {
                if let validatedName = checkValid(name: newName) {
                    addProject(name: validatedName, user: user)
                    self.showingAddSheet.toggle()
                }
                else{
                    error = true
...
            }) {
                Image(systemName: "person.badge.plus.fill")
                    .font(Font.system(.title).bold())
            }.sheet(isPresented: $showingAddSheet){
                addProjectPopup
            }
            .accessibilityIdentifier("Add Project")
        
        //The logoff button
        let logoutButton =
            Button(action: {
                userModel.logout()
            }) {
...
                }.onDelete(perform: deleteProject)
            }
            .accessibilityIdentifier("ProjectList")
        
        //The alert to warn the user of deleting a project
        let deleteAlert =
            Alert(title: Text("Warning"), message: Text("Do you surely want to delete the item?"), primaryButton: .destructive(Text("Delete")) {
                if let iset = deleteIndexSet {
                    removeProject(at: iset)
                }
            } , secondaryButton: .cancel())
        
        //Conditionally show different contents
...
    }
    
    //Add a new project and flush
    private func addProject(name: String, user: User) {
        withAnimation {
            //Set up a new project in the current context
            let newProject = Project(context: viewContext)
            newProject.name = name
            let newProjectDetails = ProjectDetails(context: viewContext)
            newProjectDetails.projectName = name
            newProjectDetails.projectProgrammingLanguage = "Language"
            newProjectDetails.projectAvgAnnualSalary = 100000.0
            newProjectDetails.projectTeamSize = 1.0
...
