...
        return model.validate()
    }
    
    var body: some View {
        
        //the generate button
        let generateButton = Button("Generate") {
            generateResults()
        }.disabled(disabled())
        
        //the logout  button
        let logoutButton = Button(action: {
            userModel.logout()
...
