...
        return result!.1!
    }
    
    //add a new user and flush
    private func addUser(name: String) {
        withAnimation {
            let newUser = User(context: viewContext)
            newUser.username = name
            
            flush()
        }
    }
    
...
